# m8c

./: CMakeLists.txt  README.md
cmake/: FetchJUCE.cmake
config/: m8c.ini  recorder.ini
docs/: dual-m8.md  per-output-inserts.md  vst-host-architecture.md
scripts/: reinstall.sh
src/: events.c  input.c  input.h  main.c  plugin_rack.c  plugin_rack.h  render.c  render.h
src/backends/: m8.h  m8_audio_capture.c  m8_audio_capture.h  m8_libserialport.c  midi_cc.c  midi_cc.h  recorder.c  recorder.h  wav_writer.c  wav_writer.h
src/host/: juce_host.h  juce_host.mm
tools/: audioprobe.c
